--- a/views/videos.njk
+++ b/views/videos.njk
@@ -3,7 +3,7 @@
     <title>Content Page</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/content-page.css">
+    <link rel="stylesheet" href="/content-style.css">
     <link rel="stylesheet" href="/video-style.css">
 </head>
 
