--- a/views/about.njk
+++ b/views/about.njk
@@ -8,8 +8,8 @@
             <a href="https://discordapp.com/invite/gCRAFhc">Comunidade</a>
             <a href="mailto:oi@rocketseat.com.br">Email</a>
             <a href="tel:+5547992078767">Telefone</a>
-            <a href="/content-page">Conteúdo</a>
-            <a href="/courses">Blog</a>
+            <a href="/courses">Conteúdo</a>
+            <a href="/content-page">Blog</a>
             </h2>
         </div>
         <div class="center">
