server get ajust

--- a/views/courses.njk
+++ b/views/courses.njk
@@ -56,7 +56,7 @@
                             </clipPath>
                         </defs>
                     </svg>
-                    <a>
+                    <a href="/video">
                         <h1>Guias estelares</h1>
                         <br>
                         <p>A trilha perfeita pra quem busca dominar os fundamentos da programação e da web como HTML, CSS, JavaScript e Git.</p>
@@ -76,7 +76,7 @@
                             </clipPath>
                         </defs>
                     </svg>
-                    <a>
+                    <a href="/video">
                         <h1>Preparação de astronautas</h1>
                         <br>
                         <p>Hora de levar suas habilidades como astronauta para o próximo nível dominando a web e as técnicas por trás de aplicações modernas.</p>
@@ -98,7 +98,7 @@
                                 </clipPath>
                             </defs>
                     </svg>
-                    <a>
+                    <a href="/video">
                         <h1>Viajando ao espaço</h1>
                         <br>
                         <p>Tudo que precisa saber para viajar ao espaço com conceitos de back-end, front-end, banco de dados, trabalho em time e mais.</p>
