--- a/views/video.njk
+++ b/views/video.njk
@@ -28,7 +28,7 @@
             <h1>{{item.info}}</h1>
         </div>
     
-        <div class="card">
+        <div class="card-courses">
             <div class="card_video_container">
                 <iframe src="https://www.youtube.com/embed/{{item.id}}" frameborder="0"></iframe>
             </div>
